--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -24,6 +24,11 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <link
+      href="//db.onlinewebfonts.com/c/6807b317d57bada4fcad989be66cc186?family=Tablet+Gothic"
+      rel="stylesheet"
+      type="text/css"
+    />
     <title>React App</title>
   </head>
   <body>
