--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
       rel="stylesheet"
       type="text/css"
     />
-    <title>React App</title>
+    <title>ADOX - Simulación CO2</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
